[gd_scene load_steps=4 format=2]

[ext_resource path="res://assests/mobs/wolf.png" type="Texture" id=1]
[ext_resource path="res://scripts/wolf.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 305.0
height = 402.0

[node name="wolf" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 29, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[node name="Wolf" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.75

[connection signal="body_entered" from="." to="." method="_on_slime_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
